# pobr-project

./: .gitignore  CMakeLists.txt  README.md
src/: calc.h  color.h  const.h  findZott.h  lib.h  logger.h  main.cpp  opencv.h  paramMX.h  paramWX.h  types.h
